welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:6: error: value rouge is not a member of object java.awt.Color
var c2 : Color=Color.rouge
                     ^