welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
}

var c1 : Color=Color.blue
var c2 : Color=Color.rouge
var i = 0

def point(c1 : Color)
{
	setCouleurBrosse(c1: Color);
	baisseBrosse;
	leveBrosse;
}

def ligne (c1 : Color, c2: Color)
{
	avance; point(c1 : Color); avance; point(c2 : Color); avance; gauche;
}

def faireMotif()
{
	ligne(Color.red , Color.blue)
	ligne(Color.blue , Color.green)
	ligne(Color.green , Color.yellow)
	ligne(Color.yellow, Color.red)
}
